# OpenCFD-Comb

./: CMakeLists.txt  M2p25_air.rar  readme.txt
.github/workflows/: build.yml
cases/M2.25_air/: conductivity-air.in  opencfd-comb2.in  specie-air.in  viscosity-air.in
cases/flat-2.25/: conductivity.in  init3d-inlet.f90  opencfd-comb2.in  readme.txt
cases/flat-2.25/sc2-data/: trans-to-comb.f90
cases/isotropic/: Grid.f90  init-isotropic.f90  opencfd-comb2.in  readme.txt
cases/jet/: Reaction.in  conductivity.in  diffusion_coefficients.in  init3d-jet.f90  inlet.in  jet-comb-inlet.f90  jet-comb-mesh.f90  mesh.in  opencfd-comb2.in  readme.txt  specie.in  viscosity.in
code/: CMakeLists.txt  Opencfd-comb.f90  makefile
code/Chemical/: CHEM_modules.f90  CHEM_reactions.f90  CHEM_reactions.f90.old  CHEM_thermdyn.f90  TRANSPORT_modules.f90
code/boundary-condition/: OCFD_BC.f90  OCFD_BC_Boundarylayers.f90  OCFD_BC_Wall_jet.f90  OCFD_BC_jet.f90  OCFD_GhostCell.f90  OCFD_GhostCell_UserDef.f90
code/flow-solver/: Comput_flow_variables.f90  OCFD_NS_Solver.f90  OCFD_Time_Adv.f90  OCFD_debug.f90  OCFD_flux_split.f90  OCFD_init.f90  OCFD_inviscous.f90  OCFD_inviscous_character.f90  OCFD_scaler_inviscous.f90  OCFD_scaler_viscous.f90  OCFD_viscous.f90
code/head/: MODULE_flow.f90  MODULE_parameter.f90  OCFD_allocate_data.f90  OCFD_precision.f90
code/mpi-io/: OCFD_ANA_savedata.f90  OCFD_IO.f90  OCFD_IO_mpi.f90  OCFD_readpara.f90
code/others/: OCFD_ANA.f90  OCFD_filtering.f90  OCFD_handle_NegativeT.f90
code/particle/: OCFD_particle_ana.f90  OCFD_particle_init.f90  OCFD_particle_redistribute.f90  OCFD_particle_time_adv.f90
code/schemes/: OCFD_SetHybrid.f90
examples/: CMakeLists.txt
examples/flat-2.25/: CMakeLists.txt  diffusion_coefficients.in  init3d-inlet.f90  opencfd-comb2.in  specie.in  viscosity.in
examples/isotropic/: CMakeLists.txt  Grid.f90  init-isotropic.f90  opencfd-comb2.in  specie.in
util/: comb-post3d-1.0.f90  init3d-inlet.f90
